<resources>
    <string name="app_name">PoS</string>

    <!-- Fragment Names -->
    <string name="admin_fragment_add_product_title">Add Product</string>
    <string name="admin_fragment_edit_product_title">Edit Product</string>
    <string name="admin_fragment_product_list_title">Registered Products</string>
    <string name="admin_fragment_sales_history_title">Sales History</string>
    <string name="admin_fragment_settings_title">Settings</string>
    <string name="shop_fragment_grid_title">Shop Name</string>
    <string name="shop_fragment_cart_title">Cart</string>

    <!-- Menu -->
    <string name="admin_menu_add_product">Add Product</string>
    <string name="admin_menu_product_list">Product List</string>
    <string name="admin_menu_sales_history">Sales History</string>
    <string name="admin_menu_settings">Settings</string>
    <string name="admin_menu_close">Close</string>
    <string name="shop_menu_open_admin">Admin</string>
    <string name="shop_menu_cart">Cart</string>

    <!-- Admin Activity -->
    <!-- Add Product Fragment -->
    <string name="admin_fragment_add_product_item_name">Item Name</string>
    <string name="admin_fragment_add_product_item_price">Item Price</string>
    <string name="admin_fragment_add_product_item_icon">Item Icon</string>
    <string name="admin_fragment_add_product_item_name_placeholder">Item name</string>
    <string name="admin_fragment_add_product_item_price_placeholder">0</string>
    <string name="admin_fragment_add_product_add_item">Add Item</string>
    <string name="admin_fragment_add_product_add_icon">Add Icon</string>

    <!-- Edit Product Fragment -->
    <string name="admin_fragment_edit_product_item_name">Item Name</string>
    <string name="admin_fragment_edit_product_item_price">Item Price</string>
    <string name="admin_fragment_edit_product_item_icon">Item Icon</string>
    <string name="admin_fragment_edit_product_item_name_placeholder">Item name</string>
    <string name="admin_fragment_edit_product_item_price_placeholder">0</string>
    <string name="admin_fragment_edit_product_edit_item">Edit Item</string>
    <string name="admin_fragment_edit_product_add_icon">Add Icon</string>

    <!-- Sales History Fragment -->
    <string name="admin_fragment_sales_history_item_date">Date</string>
    <string name="admin_fragment_sales_history_item_name">Item Name</string>
    <string name="admin_fragment_sales_history_item_price_single">Price</string>
    <string name="admin_fragment_sales_history_item_qty">Qty</string>
    <string name="admin_fragment_sales_history_item_price_total">Total</string>

    <string-array name="array_month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="array_day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="array_year">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
        <item>2041</item>
        <item>2042</item>
        <item>2043</item>
        <item>2044</item>
        <item>2045</item>
        <item>2046</item>
        <item>2047</item>
        <item>2048</item>
        <item>2049</item>
    </string-array>

    <!-- Shop Activity -->
    <!-- Grid Fragment -->
    <string name="shop_fragment_grid_item_name_placeholder">Item Name</string>
    <string name="shop_fragment_grid_item_price_placeholder">50</string>

    <!-- Cart Fragment -->
    <string name="shop_fragment_cart_item_name">Item Name</string>
    <string name="shop_fragment_cart_item_price_single">Price</string>
    <string name="shop_fragment_cart_item_qty_add">+</string>
    <string name="shop_fragment_cart_item_qty">Qty</string>
    <string name="shop_fragment_cart_item_qty_remove">-</string>
    <string name="shop_fragment_cart_item_price_total">Total</string>
    <string name="shop_fragment_cart_item_delete">X</string>
    <string name="shop_fragment_cart_checkout">Checkout</string>
    <string name="shop_fragment_cart_cart_total">Total</string>
    <string name="shop_fragment_cart_cart_total_placeholder">10000</string>

</resources>
