<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/admin_adapter_product_list_margin_start_end"
    android:layout_marginEnd="@dimen/admin_adapter_product_list_margin_start_end"
    android:layout_marginBottom="@dimen/admin_adapter_product_list_margin_top_bottom"
    android:background="@drawable/rounded_bg"
    android:paddingBottom="@dimen/admin_adapter_product_list_padding_bottom">

    <TextView
        android:id="@+id/admin_product_list_tv_item_name"
        android:layout_width="@dimen/admin_fragment_product_list_item_name_width"
        android:layout_height="@dimen/admin_fragment_product_list_box_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/shop_fragment_cart_item_name"
        android:textSize="@dimen/admin_fragment_product_list_text_size"
        app:layout_constraintStart_toEndOf="@+id/admin_product_list_iv_item_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/admin_product_list_tv_item_price"
        android:layout_width="@dimen/admin_fragment_product_list_item_price_width"
        android:layout_height="@dimen/admin_fragment_product_list_box_height"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/shop_fragment_cart_item_price_single"
        android:textSize="@dimen/admin_fragment_product_list_text_size"
        app:layout_constraintStart_toEndOf="@+id/admin_product_list_tv_item_name"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/admin_product_list_btn_delete"
        android:layout_width="@dimen/admin_fragment_product_list_button_remove_size"
        android:layout_height="@dimen/admin_fragment_product_list_button_remove_size"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:src="@drawable/ic_delete_black"
        android:text="@string/shop_fragment_cart_item_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/admin_product_list_btn_edit"
        android:layout_width="@dimen/admin_fragment_product_list_button_remove_size"
        android:layout_height="@dimen/admin_fragment_product_list_button_remove_size"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:src="@drawable/ic_edit_black"
        android:text="@string/shop_fragment_cart_item_delete"
        app:layout_constraintBottom_toBottomOf="@+id/admin_product_list_btn_delete"
        app:layout_constraintEnd_toStartOf="@+id/admin_product_list_btn_delete"
        app:layout_constraintTop_toTopOf="@+id/admin_product_list_btn_delete"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/admin_product_list_iv_item_icon"
        android:layout_width="@dimen/admin_fragment_product_list_icon_size"
        android:layout_height="@dimen/admin_fragment_product_list_icon_size"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_settings_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>